Se crea método para guardar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,69 +4,149 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#403E3E"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:text="PRODUCTO"
-        android:textSize="36sp"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="43dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/txtNombre"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/white"
         android:ems="10"
+        android:hint="Nombre"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:paddingLeft="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtCodigo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="115dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/editTextNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/txtCodigo"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/white"
         android:ems="10"
+        android:hint="Código"
         android:inputType="number"
+        android:paddingLeft="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtValor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="185dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
 
     <EditText
-        android:id="@+id/editTextNumber2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/txtValor"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/white"
         android:ems="10"
+        android:hint="Valor"
         android:inputType="number"
+        android:paddingLeft="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtDescripcion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="266dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/txtDescripcion"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:background="@color/white"
         android:ems="10"
+        android:hint="Descripción"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:paddingLeft="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/spCategoria"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="351dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtValor" />
 
     <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="425dp" />
+        android:id="@+id/spCategoria"
+        android:layout_width="210dp"
+        android:layout_height="40dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:ems="10"
+        android:hint="CAT"
+        android:inputType="textPersonName"
+        android:paddingLeft="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/spIva"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />
+
+    <Spinner
+        android:id="@+id/spIva"
+        android:layout_width="210dp"
+        android:layout_height="40dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:ems="10"
+        android:hint="IVA"
+        android:inputType="textPersonName"
+        android:paddingLeft="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnAgregar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spCategoria" />
+
+    <Button
+        android:id="@+id/btnAgregar"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="AGREGAR"
+        app:backgroundTint="#13950F"
+        app:layout_constraintBottom_toTopOf="@+id/btnSiguiente"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spIva" />
+
+    <ListView
+        android:id="@+id/lvLista"
+        android:layout_width="250dp"
+        android:layout_height="180dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSiguiente" />
+
+    <Button
+        android:id="@+id/btnSiguiente"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="SIGUIENTE"
+        app:backgroundTint="#13950F"
+        app:layout_constraintBottom_toTopOf="@+id/lvLista"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
