Se agregan botones

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,52 +11,64 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:text="PRODUCTO"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txtNombre"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtNombre"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
         android:background="@color/white"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName"
         android:paddingLeft="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtCodigo"
+        app:layout_constraintBottom_toTopOf="@+id/txtValor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/txtCodigo"
-        android:layout_width="200dp"
+        android:layout_width="145dp"
         android:layout_height="30dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:background="@color/white"
         android:ems="10"
         android:hint="Código"
         android:inputType="number"
         android:paddingLeft="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtValor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintBottom_toTopOf="@+id/txtDescripcion"
+        app:layout_constraintEnd_toStartOf="@+id/txtValor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
 
     <EditText
         android:id="@+id/txtValor"
-        android:layout_width="200dp"
+        android:layout_width="145dp"
         android:layout_height="30dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
         android:layout_marginBottom="5dp"
         android:background="@color/white"
         android:ems="10"
@@ -65,14 +77,19 @@
         android:paddingLeft="15dp"
         app:layout_constraintBottom_toTopOf="@+id/txtDescripcion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />
+        app:layout_constraintStart_toEndOf="@+id/txtCodigo"
+        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
 
     <EditText
         android:id="@+id/txtDescripcion"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="30dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
+        android:layout_marginBottom="5dp"
         android:background="@color/white"
         android:ems="10"
         android:hint="Descripción"
@@ -80,14 +97,18 @@
         android:paddingLeft="15dp"
         app:layout_constraintBottom_toTopOf="@+id/spCategoria"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtValor" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />
 
     <Spinner
         android:id="@+id/spCategoria"
-        android:layout_width="210dp"
+        android:layout_width="310dp"
         android:layout_height="40dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
         android:background="@android:drawable/btn_dropdown"
         android:ems="10"
         android:hint="CAT"
@@ -95,14 +116,18 @@
         android:paddingLeft="15dp"
         app:layout_constraintBottom_toTopOf="@+id/spIva"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />
 
     <Spinner
         android:id="@+id/spIva"
-        android:layout_width="210dp"
+        android:layout_width="310dp"
         android:layout_height="40dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
         android:background="@android:drawable/btn_dropdown"
         android:ems="10"
         android:hint="IVA"
@@ -110,43 +135,80 @@
         android:paddingLeft="15dp"
         app:layout_constraintBottom_toTopOf="@+id/btnAgregar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spCategoria" />
 
     <Button
         android:id="@+id/btnAgregar"
-        android:layout_width="200dp"
+        android:layout_width="145dp"
         android:layout_height="50dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:text="AGREGAR"
         app:backgroundTint="#13950F"
-        app:layout_constraintBottom_toTopOf="@+id/btnSiguiente"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/btnPromedio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spIva" />
 
     <ListView
         android:id="@+id/lvLista"
-        android:layout_width="250dp"
-        android:layout_height="180dp"
+        android:layout_width="300dp"
+        android:layout_height="310dp"
         android:layout_marginBottom="10dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSiguiente" />
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
-        android:id="@+id/btnSiguiente"
-        android:layout_width="200dp"
+        android:id="@+id/btnPromedio"
+        android:layout_width="145dp"
         android:layout_height="50dp"
-        android:text="SIGUIENTE"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
+        android:text="PROMEDIO"
+        app:backgroundTint="#13950F"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnAgregar"
+        app:layout_constraintTop_toBottomOf="@+id/spIva" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="145dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:text="BARATOS"
+        app:backgroundTint="#13950F"
+        app:layout_constraintBottom_toTopOf="@+id/lvLista"
+        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="145dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
+        android:text="COSTOSOS"
         app:backgroundTint="#13950F"
         app:layout_constraintBottom_toTopOf="@+id/lvLista"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/btnPromedio" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
